# latinitas

./: FINDINGS_spacing_and_annotation_fixes.md  GRAMMAR_PARSER.md  NOTEBOOK_USAGE.md  PR_BODY.md  README.md  README_IMPROVEMENTS.md  RECOMMENDATION_which_file_to_use.md  annotate_inscriptions_with_gemini.ipynb  create_training_file.py  fix_annotations.py  fix_annotations_v2.py  fix_annotations_v3.py  fix_spacing_and_adjust_annotations.py  fix_spacing_in_transcriptions.py  inscriptions.csv  inscriptions_structured_data_extraction_via_llm.ipynb  latinepi_demo.ipynb  plan.md  pyproject.toml  real_data_w_generated_annotations_FIXED.jsonl  real_data_w_generated_annotations_spacing_fixed.jsonl  real_data_w_generated_annotations_to_fix.jsonl  real_data_w_spacing_and_annotations_fixed.jsonl  requirements.txt  setup.py  training_spacy_model_for_latin_epigraphy.ipynb
latinepi/: __init__.py  cli.py  dependency.py  edh_utils.py  grammar_patterns.py  hybrid_parser.py  morphology.py  parser.py
latinepi/test/: __init__.py  test_cli.py  test_grammar_patterns.py  test_hybrid_parser.py  test_integration.py  test_parser.py
