[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "latinepi"
version = "0.1.0"
description = "Extract structured personal data from Roman Latin epigraphic inscriptions"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Shawn Graham"},
]
keywords = ["latin", "epigraphy", "inscriptions", "named-entity-recognition", "nlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
grammar = ["cltk>=1.0.0"]
dev = ["pytest>=7.0.0"]

[project.urls]
Homepage = "https://github.com/shawngraham/latinepi"
Repository = "https://github.com/shawngraham/latinepi"

[project.scripts]
latinepi = "latinepi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["latinepi*"]
exclude = ["latinepi.test*"]
